# dzz-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 103cd2149bf5_adding_user_model.py  2634732c8172_adding_models_and_processedimages_models.py  729e8095f1f5_adding_model.py  7a3586cd84b1_adding_models_and_processedimages_models.py  7eda4cb83e29_adding_user_model.py  89fdf5ef0c0a_adding_processedimages_and_models_model.py
app/: __init__.py  config.py  deps.py  models.py  rabbit.py  schemas.py  utils.py
app/views/: images.py  login.py  model.py  user.py
front/: loading.html  main.html  main_loading_result.css  result.html
public/: index.html
public/assets/: version.json
public/assets/immutable/assets/: 0.B0zDZpmp.css  4.B_VwTGfB.css  _layout.BAdIWgdp.css  _page.Byfg7DgK.css
public/assets/immutable/chunks/: entry.CbpJ59DM.js  index.BE9nXfQB.js  index.BeSP3sf6.js  scheduler.CNyn7n1I.js  task_store.CRjp3V4u.js
public/assets/immutable/entry/: app.1rnzsYe8.js  (+1 more)
public/load/: index.html
public/result/: index.html
sveltefront/: package-lock.json  package.json  svelte.config.js
sveltefront/src/routes/: +layout.svelte  +page.svelte  loading.html  main_loading_result.css
terminal-transmitter/: .gitignore  main.py  pyproject.toml
terminal-transmitter/core/: app.py  app_access.py  db_loader.py  settings.py
terminal-transmitter/src/service/: s3.py
terminal-transmitter/src/transport/: __init__.py  process.py  rabbit_router.py
tests/integration/: test_get_models.py  test_get_pims.py
(+7 files in other folders)
